# PeakDeepMaster

./: .gitignore  PeakDeepMaster.py  README.md  pyproject.toml  requirements.yaml
configs/: config_1D_coupling.yaml  config_1D_mass.yaml  config_2D.yaml  config_2D_width.yaml
src/: __init__.py
src/data/: DataHelpers.py  DataModule.py  DataScaler.py  __init__.py
src/models/: RatioEstimator.py  __init__.py
src/scripts/: collect_paper_plots.py  widh.py
src/utils/: Inference.py  InputPlots.py  Performance.py  Predict.py  PseudoExperiments.py  Train.py  __init__.py  utils.py
